Service Regression/tests/00DM0000001eO1fMAE/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AES_SFConnector__AgentType__c</fullName>
        <label>AgentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__CallReference__c</fullName>
        <label>CallReference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__Called__c</fullName>
        <description>The number that was called by the originator. (DNIS)</description>
        <label>Called</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__Caller__c</fullName>
        <description>The number that was dialed by the originator of the call. (ANI)</description>
        <label>Caller</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__UCID__c</fullName>
        <description>Universal Call ID for the Avaya telephone system.</description>
        <label>UCID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__UUI__c</fullName>
        <description>User-to-User Information as provided by the CTI link</description>
        <label>UUI</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_2__c</fullName>
        <label>Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type_3__c</fullName>
        <label>Activity Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Division__c</fullName>
        <formula>CreatedBy.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Created by Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_In_Person__c</fullName>
        <formula>IF( 
Activity_Type_2__c = &quot;In Person Visit&quot;,TODAY()-Date_Completed__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last In Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_OB_Call__c</fullName>
        <description>field to capture the number of days since the last outbound call on an activity</description>
        <formula>IF( 
Activity_Type_2__c  = &quot;Outbound Call/Fax&quot;,TODAY()-Date_Completed__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last OB Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location determined by the location of the iPad running DSA on Checkout</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <label>Meeting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Set</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <inlineHelpText>updated by workflow - pulls the first 97 characters of the logged activity for viewing in related list and views</inlineHelpText>
        <label>Preview</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <picklist>
            <picklistValues>
                <fullName>In Person Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Completed_Date__c</fullName>
        <description>date/time field of when the task has a status of completed</description>
        <label>Task Completed Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>